# data-wow-exam

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml  pyspark-3.py  pyspark-4.py  requirements.txt
conf/: database_config.yml
docker/: Dockerfile  docker-compose.yaml  pyproject.toml
docker/Volumes/airflow/dags/: etl_dag.py
docker/Volumes/init-script/: create_table.sql
docker/Volumes/spark/app/: etl_process.py
docker/Volumes/spark/config/: database_config.yml
docker/Volumes/spark/resources/: sampledata_new.py
document/: datalog-table-data.png1
init-script/: create_table.sql
