[tool.poetry]
name = "data-wow-entrance-exam"
version = "0.1.0"
description = "This is a python package dependencies by Poetry."
authors = ["SERPSAIPONG NAVANURAKSA <funamori.senji@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
pyspark = "^3.5.0"
loguru = "^0.7.2"
rich = "^13.6.0"
pyyaml = "^6.0.1"
pendulum = "^2.1.2"
coloredlogs = "^15.0.1"

[tool.poetry.group.dev.dependencies]
yes = "^0.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
